[package]
name = "dver"
version = "1.0.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
log = "0.4.25"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.137"
sha2 = "0.10.8"
ssh-key = { version = "0.6.7", features = ["ed25519"] }
structopt = "0.3.26"
thiserror = "2.0.11"


[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true

[dev-dependencies]
home = "0.5.11"
rand = "0.8.5"
