[package]
name = "dver"
version = "1.0.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
derive_more = { version = "2.0.1", features = ["from"] }
hex = "0.4.3"
log = "0.4.25"
pem = "3.0.4"
pretty-hex = "0.4.1"
rpassword = "7.3.1"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
sha2 = "0.10.8"
ssh-key = { version = "0.6.7", features = ["ed25519", "rsa"] }
structopt = "0.3.26"
tempfile = "3.16.0"
textwrap = "0.16.1"
walkdir = "2.5.0"
which = "7.0.1"


[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true

[dev-dependencies]
home = "0.5.11"
pretty-hex = "0.4.1"
rand = "0.8.5"
tempfile = "3.16.0"
